opam-version: "1.2"
maintainer: "Marek Kubica <mku@issuu.com>"
author: "Team Raccoon"
homepage: "https://github.com/issuu/thread-pool-async"
doc: "https://issuu.github.io/thread-pool-async/"
dev-repo: "git@github.com:issuu/thread-pool-async.git"
bug-reports: "https://github.com/issuu/thread-pool-async/issues"
build: [["dune" "build" "-p" name "-j" jobs]]
build-test: [["dune" "runtest" "-p" name "-j" jobs]]
depends: [
  "dune" {build}
  "async_kernel" {>= "v0.9" & < "v0.12"}
  "async_unix" {>= "v0.9" & < "v0.12"}
  "base" {>= "v0.9" & < "v0.12"}
  "ppx_let" {>= "v0.9" & < "v0.12"}
  "alcotest" {test}
  "alcotest-async" {test}
  "core" {test & >= "v0.9" & < "v0.12"}
]
